Enhance image logic and readability